--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="wrap_float">
                     <div class="header__top">
                         <div class="tel">
-                            <a href="tel:+91-22-41642175">+91-22-41642175</a>
+                            <a href="tel:+91-82912-74240">+91-82912-74240</a>
                         </div>
                         <div class="email">
                             <a href="mailto:sales.marketing@indiacarz.com">sales.marketing@indiacarz.com</a>
@@ -172,7 +172,7 @@
                                 </div>
                                 <div class="bottom">
                                     <div class="tel">
-                                        <a href="tel:+91-22-41642175">+91-22-41642175</a>
+                                        <a href="tel:+91-82912-74240">+91-82912-74240</a>
                                     </div>
                                     <div class="email">
                                         <a href="mailto:sales.marketing@indiacarz.com
@@ -1132,7 +1132,7 @@ So you get better service at the lowest possible price.
                             <div class="_title">CONTACTS</div>
                             <div class="text">
                                 <p>Address: <b>Mumbai, India</b> </p>
-                                <p>Phone: <a href="tel:+91-22-41642175">+91-22-41642175</a></p>
+                                <p>Phone: <a href="tel:+91-82912-74240">+91-82912-74240</a></p>
                                 <p><a href="mailto:sales.marketing@indiacarz.com">sales.marketing@indiacarz.com</a></p>
                             </div>
                         </div>
