Updated Jaipur HTML

--- a/tourlist-westindia-rajasthan-jaipur.html
+++ b/tourlist-westindia-rajasthan-jaipur.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>IndiaCARZ Tours Rajasthan</title>
+    <title>IndiaCARZ Tours Jaipur</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
@@ -208,7 +208,7 @@
                     <span class="separator">/</span>
                     <a href="#" class="current">West India Tours</a>
 			<span class="separator">/</span>
-                    <a href="#" class="current">Rajasthan</a>
+                    <a href="#" class="current">Jaipur</a>
                 </div>
             </div>
         </div>
@@ -233,9 +233,9 @@
                                         </div>
                                     </div>
                                     <h1 class="title">
-                                        India, Rajasthan
+                                        India, Jaipur
                                     </h1>
-                                    <div class="geo">India, Rajasthan</div>
+                                    <div class="geo">India, Jaipur</div>
                                 </div>
                                 <div class="single-right controls">
                                     <button class="btn getModal" data-href="#"><span>Book now</span></button><!--data-href="#book-now" to #-->
