--- a/tourlist-westindia-rajasthan-jaipur.html
+++ b/tourlist-westindia-rajasthan-jaipur.html
@@ -212,7 +212,7 @@
                 </div>
             </div>
         </div>
-        <div class="image_bg--single" style="background-image: url(https://indiacarz.s3.ap-south-1.amazonaws.com/indiacarz_images/indiaCARZ_tourlist_westindia/indiaCARZ_tourlist_westindia_Rajasthan/IndiaCARZ_tourlist_northindia_Rajasthan.jpg);"></div>
+        <div class="image_bg--single" style="background-image: url(images/IndiaCARZ_tourlist_westindia/indiaCARZ_tourlist_westindia_Jaipur/Gangori_Bazaarr_Head_Image.jpg);"></div>
         <div class="page_content single-page tour-single">
             <div class="content-head">
                 <div class="wrap">
@@ -247,19 +247,19 @@
                             </div>
                             <div class="single-tour-slider" id="single-tour-slider">
                                 <div class="single-tour-slide">
-                                    <img src="https://indiacarz.s3.ap-south-1.amazonaws.com/indiacarz_images/indiaCARZ_tourlist_westindia/indiaCARZ_tourlist_westindia_Rajasthan/IndiaCARZ_tourlist_northindia_Rajasthan1.jpg" class="image-cover" alt="">
+                                    <img src="images/IndiaCARZ_tourlist_westindia/indiaCARZ_tourlist_westindia_Jaipur/Patrika_gate_Jaipur.jpg" class="image-cover" alt="">
                                 </div>
                                 <div class="single-tour-slide">
-                                    <img src="images/IndiaCARZ_tourlist_westindia/IndiaCARZ_tourlist_westindia_rajasthan/amber_fort.jpg" class="image-cover" alt="">
+                                    <img src="images/IndiaCARZ_tourlist_westindia/indiaCARZ_tourlist_westindia_Jaipur/Hawa_Mahal_Jaipur.jpg" class="image-cover" alt="">
                                 </div>
                                 <div class="single-tour-slide">
-                                    <img src="images/IndiaCARZ_tourlist_westindia/IndiaCARZ_tourlist_westindia_rajasthan/Jaisalmer.jpg" class="image-cover" alt="">
+                                    <img src="images/IndiaCARZ_tourlist_westindia/indiaCARZ_tourlist_westindia_Jaipur/JDA_Market_Jaipur.jpg" class="image-cover" alt="">
                                 </div>
                                 <div class="single-tour-slide">
-                                    <img src="images/IndiaCARZ_tourlist_westindia/IndiaCARZ_tourlist_westindia_rajasthan/bundi.jpg" class="image-cover" alt="">
+                                    <img src="images/IndiaCARZ_tourlist_westindia/indiaCARZ_tourlist_westindia_Jaipur/Raj_Mandir_Cinema_Jaipur.jpg" class="image-cover" alt="">
                                 </div>
                                 <div class="single-tour-slide">
-                                    <img src="images/IndiaCARZ_tourlist_westindia/IndiaCARZ_tourlist_westindia_rajasthan/lake_palace.jpg" class="image-cover" alt="">
+                                    <img src="images/IndiaCARZ_tourlist_westindia/indiaCARZ_tourlist_westindia_Jaipur/Amber-Palace_Jaipur_Head_Image.jpg" class="image-cover" alt="">
                                 </div>
 								<!-- <div class="single-tour-slide">
                                     <img src="https://indiacarz.s3.ap-south-1.amazonaws.com/indiacarz_images/indiaCARZ_tourlist_westindia/indiaCARZ_tourlist_westindia_Rajasthan/IndiaCARZ_tourlist_northindia_Rajasthan6.jpg" class="image-cover" alt="">
@@ -283,8 +283,8 @@
                             <div class="description single-row">
                                 <div class="single-left">
                                     <p>
-                                      Rajasthan literally means "The Land of Kings".The oldest reference to Rajasthan is found in a stone inscription dated back to 625 CE. The first printed mention of the name Rajasthan appears in the 1829 publication Annals and Antiquities of Rajasthan or the Central and Western Rajpoot States of India, while the earliest known record of Rajputana as a name for the region is in George Thomas's 1800 memoir Military Memories. John Keay, in his book India: A History, stated that Rajputana was coined by the British in 1829, John Briggs, translating Ferishta's history of early Islamic India, used the phrase "Rajpoot (Rajput) princes" rather than "Indian princes".
-									  </p>
+                                        Jaipur, known as the "Pink City," enchants visitors with its vibrant rose-hued streets, where the warm, terracotta tones of the architecture glow under the sun, creating a captivating blend of history and color. Beyond its bustling bazaars and ornate palaces, the city is home to the magnificent Amber Palace, perched on a hillside overlooking a serene lake. The palace dazzles with its intricate mirror work, delicate frescoes, and grand courtyards, offering a glimpse into a regal past amid breathtaking surroundings. Together, Jaipur and Amber Palace offer a journey through beauty, culture, and timeless charm.
+									</p>
                                 </div>
                                 <div class="single-right">
                                     <div class="map-iframe">
