Added transfers.html page

--- a/blog-indiacarzblog.html
+++ b/blog-indiacarzblog.html
@@ -113,7 +113,7 @@
                                 </div>
                                 <div class="bottom">
                                     <div class="tel">
-                                        <a href="tel:+11235678910">+1 1235 6789 10</a>
+                                        <a href="tel:+91-82912-74240">+91-82912-74240</a>
                                     </div>
                                     <div class="email">
                                         <a href="mailto:info@hellodigi.ru">info@hellodigi.ru</a>
@@ -528,7 +528,7 @@
                             <div class="_title">CONTACTS</div>
                             <div class="text">
                                 <p>Address: <b>12 Main Street Pt. London</b> </p>
-                                <p>Phone: <a href="#">+1 1235 6789 10</a></p>
+                                <p>Phone: <a href="#">+91-82912-74240</a></p>
                                 <p><a href="#">info@hellodigi.ru</a></p>
                             </div>
                         </div>
