Changedf links and phone numbers

--- a/blog-indiacarzblog.html
+++ b/blog-indiacarzblog.html
@@ -116,7 +116,7 @@
                                         <a href="tel:+91-82912-74240">+91-82912-74240</a>
                                     </div>
                                     <div class="email">
-                                        <a href="mailto:info@hellodigi.ru">info@hellodigi.ru</a>
+                                        <a href="mailto:sales.marketing@indiacarz.com">sales.marketing@indiacarz.com</a>
                                     </div>
                                     <div class="socials">
                                         <div class="links">
@@ -529,7 +529,7 @@
                             <div class="text">
                                 <p>Address: <b>12 Main Street Pt. London</b> </p>
                                 <p>Phone: <a href="#">+91-82912-74240</a></p>
-                                <p><a href="#">info@hellodigi.ru</a></p>
+                                <p><a href="#">sales.marketing@indiacarz.com</a></p>
                             </div>
                         </div>
                         <div class="mobile_socials">
