--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                     <div class="wrap_float">
                         <div class="items">
                             <div class="scroll">
-                                <a href="tourlist-southindia-telangana.html" class="categories_item">
+                                <a href="transfers.html" class="categories_item">
                                     <div class="icon">
                                         <div class="icon-wrap">
                                             <img src="https://indiacarz.s3.ap-south-1.amazonaws.com/indiacarz_images/indiacarz_home_image/indiacarz_home_image_categories_tours_transfers.jpg" alt="" class="image-cover">
