--- a/transfers.html
+++ b/transfers.html
@@ -175,7 +175,7 @@
                                         <a href="tel:+91-82912-74240">+91-82912-74240</a>
                                     </div>
                                     <div class="email">
-                                        <a href="mailto:info@hellodigi.ru">info@hellodigi.ru</a>
+                                        <a href="mailto:sales.marketing@indiacarz.com">sales.marketing@indiacarz.com</a>
                                     </div>
                                     <div class="socials">
                                         <div class="links">
@@ -203,7 +203,7 @@
                 <div class="wrap_float">
                     <a href="#">Home</a>
                     <span class="separator">/</span>
-                    <a href="#" class="current">Search Tours</a>
+                    <a href="#" class="current">Transfers</a>
                 </div>
             </div>
         </div>
@@ -572,31 +572,22 @@
                                 Recent Articles
                             </div>
                             <div class="list">
-                                <a href="blog-single.html" class="_item">
-                                    <div class="img" style="background-image: url(img/sidebar4.jpg);"></div>
+                                <a href="blog-list.html" class="_item">
+                                    <div class="img" style="background-image: url(https://indiacarz.s3.ap-south-1.amazonaws.com/indiacarz_images/indiacarz_blog/indiacarz_blog_article_1_car.jpeg);"></div>
                                     <div class="info">
                                         <div class="_title">
-                                            Pack wisely before traveling
+                                            IndiaCARZ - introduction
                                         </div>
-                                        <div class="date">JUNE 6/2019</div>
+                                        <div class="date">SEP 17/2024</div>
                                     </div>
                                 </a>
-                                <a href="blog-single.html" class="_item">
-                                    <div class="img" style="background-image: url(img/sidebar5.jpg);"></div>
+                                <a href="blog-indiacarzblog.html" class="_item">
+                                    <div class="img" style="background-image: url(https://indiacarz.s3.ap-south-1.amazonaws.com/indiacarz_images/indiacarz_blog/indiacarz_blog_article_2_car.jpg);"></div>
                                     <div class="info">
                                         <div class="_title">
-                                            Pack wisely before traveling
+                                            IndiaCARZ Blog
                                         </div>
-                                        <div class="date">JUNE 6/2019</div>
-                                    </div>
-                                </a>
-                                <a href="blog-single.html" class="_item">
-                                    <div class="img" style="background-image: url(img/sidebar6.jpg);"></div>
-                                    <div class="info">
-                                        <div class="_title">
-                                            Pack wisely before traveling
-                                        </div>
-                                        <div class="date">JUNE 6/2019</div>
+                                        <div class="date">SEP 17/2024</div>
                                     </div>
                                 </a>
                             </div>
@@ -610,7 +601,7 @@
                                 <a href="#">+91-82912-74240</a>
                             </div>
                             <div class="email">
-                                <a href="#">info@hellodigi.ru</a>
+                                <a href="#">sales.marketing@indiacarz.com</a>
                             </div>
                         </div>
                     </div>
@@ -670,9 +661,9 @@
                         <div class="footer_center_right">
                             <div class="_title">CONTACTS</div>
                             <div class="text">
-                                <p>Address: <b>12 Main Street Pt. London</b> </p>
+                                <p>Address: <b>Mumbai, India</b> </p>
                                 <p>Phone: <a href="#">+91-82912-74240</a></p>
-                                <p><a href="#">info@hellodigi.ru</a></p>
+                                <p><a href="#">sales.marketing@indiacarz.com</a></p>
                             </div>
                         </div>
                         <div class="mobile_socials">
@@ -685,7 +676,7 @@
                 </div>
             </div>
             <div class="footer_bottom">
-                Copyright 2020 <a href="#">hellodigi.ru</a> | All Right Reserved
+                Copyright 2024 <a href="#">Kall Trip Pvt Ltd</a> | All Rights Reserved
             </div>
         </div>
     </div>
