--- a/tourlist-centralindia-madhya-pradesh-bhopal.html
+++ b/tourlist-centralindia-madhya-pradesh-bhopal.html
@@ -213,7 +213,7 @@
                 </div>
             </div>
         </div>
-        <div class="image_bg--single" style="background-image: url(images/IndiaCARZ_tourlist_centralindia/IndiaCARZ_tourlist_centralindia_bhopal/Bhopal_head_image.jpg);"></div>
+        <div class="image_bg--single" style="background-image: url(https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_centralindia/IndiaCARZ_tourlist_centralindia_bhopal/Bhopal_head_image.jpg);"></div>
         <div class="page_content single-page tour-single">
             <div class="content-head">
                 <div class="wrap">
@@ -249,16 +249,16 @@
                             <div class="single-tour-slider" id="single-tour-slider">
                                 <div class="single-tour-slide">
 
-                                    <img src="images/IndiaCARZ_tourlist_centralindia/IndiaCARZ_tourlist_centralindia_bhopal/Bhopal_image1.jpg" class="image-cover" alt="">
+                                    <img src="https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_centralindia/IndiaCARZ_tourlist_centralindia_bhopal/Bhopal_image1.jpg" class="image-cover" alt="">
                                 </div>
                                 <div class="single-tour-slide">
-                                    <img src="images/IndiaCARZ_tourlist_centralindia/IndiaCARZ_tourlist_centralindia_bhopal/Bhopal_image2.jpg" class="image-cover" alt="">
+                                    <img src="https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_centralindia/IndiaCARZ_tourlist_centralindia_bhopal/Bhopal_image2.jpg" class="image-cover" alt="">
                                 </div>
                                 <div class="single-tour-slide">
-                                    <img src="images/IndiaCARZ_tourlist_centralindia/IndiaCARZ_tourlist_centralindia_bhopal/Bhopal_image3.jpg" class="image-cover" alt="">
+                                    <img src="https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_centralindia/IndiaCARZ_tourlist_centralindia_bhopal/Bhopal_image3.jpg" class="image-cover" alt="">
                                 </div>
                                 <div class="single-tour-slide">
-                                    <img src="images/IndiaCARZ_tourlist_centralindia/IndiaCARZ_tourlist_centralindia_bhopal/Bhopal_image4.jpg" class="image-cover" alt="">
+                                    <img src="https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_centralindia/IndiaCARZ_tourlist_centralindia_bhopal/Bhopal_image4.jpg" class="image-cover" alt="">
                                 </div>
                                 <div class="single-tour-slide">
                                     <img src="images/IndiaCARZ_tourlist_centralindia/IndiaCARZ_tourlist_centralindia_bhopal/Bhopal_image5.jpg" class="image-cover" alt="">
