Updated image links and added Footer

--- a/tourlist-centralindia-madhya-pradesh-bhopal.html
+++ b/tourlist-centralindia-madhya-pradesh-bhopal.html
@@ -261,7 +261,7 @@
                                     <img src="https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_centralindia/IndiaCARZ_tourlist_centralindia_bhopal/Bhopal_image4.jpg" class="image-cover" alt="">
                                 </div>
                                 <div class="single-tour-slide">
-                                    <img src="images/IndiaCARZ_tourlist_centralindia/IndiaCARZ_tourlist_centralindia_bhopal/Bhopal_image5.jpg" class="image-cover" alt="">
+                                    <img src="https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_centralindia/IndiaCARZ_tourlist_centralindia_bhopal/Bhopal_image5.jpg" class="image-cover" alt="">
                                 </div>
 								<!-- <div class="single-tour-slide">
                                     <img src="https://indiacarz.s3.ap-south-1.amazonaws.com/indiacarz_images/IndiaCARZ_tourlist_centralindia/indiaCARZ_tourlist_centralindia_MadhyaPradesh/IndiaCARZ_tourlist_centralindia_Madhya_Pradesh6.jpg" class="image-cover" alt="">
