--- a/tourlist-westindia-gandhinagar.html
+++ b/tourlist-westindia-gandhinagar.html
@@ -212,7 +212,7 @@
                 </div>
             </div>
         </div>
-        <div class="image_bg--single" style="background-image: url(images/IndiaCARZ_tourlist_westindia/indiaCARZ_tourlist_westindia_gandhinagar/gandhinagar_photo2.png);"></div>
+        <div class="image_bg--single" style="background-image: url(https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_westindia/indiaCARZ_tourlist_westindia_gandhinagar/gandhinagar_photo2.png);"></div>
         <div class="page_content single-page tour-single">
             <div class="content-head">
                 <div class="wrap">
@@ -247,19 +247,19 @@
                             </div>
                             <div class="single-tour-slider" id="single-tour-slider">
                                 <div class="single-tour-slide">
-                                    <img src="images/IndiaCARZ_tourlist_westindia/indiaCARZ_tourlist_westindia_gandhinagar/gandhinagar_inroda_imag1.jpg" class="image-cover" alt="">
+                                    <img src="https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_westindia/indiaCARZ_tourlist_westindia_gandhinagar/gandhinagar_inroda_imag1.jpg" class="image-cover" alt="">
                                 </div>
                                 <div class="single-tour-slide">
-                                    <img src="images/IndiaCARZ_tourlist_westindia/indiaCARZ_tourlist_westindia_gandhinagar/gandhinagar_inroda_imag2.jpg" class="image-cover" alt="">
+                                    <img src="https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_westindia/indiaCARZ_tourlist_westindia_gandhinagar/gandhinagar_inroda_imag2.jpg" class="image-cover" alt="">
                                 </div>
                                 <div class="single-tour-slide">
-                                    <img src="images/IndiaCARZ_tourlist_westindia/indiaCARZ_tourlist_westindia_gandhinagar/gandhinagar_photo1.jpeg" class="image-cover" alt="">
+                                    <img src="https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_westindia/indiaCARZ_tourlist_westindia_gandhinagar/gandhinagar_photo1.jpeg" class="image-cover" alt="">
                                 </div>
                                 <div class="single-tour-slide">
-                                    <img src="images/IndiaCARZ_tourlist_westindia/indiaCARZ_tourlist_westindia_gandhinagar/AKshardham_Gandhinagar.jpg" class="image-cover" alt="">
+                                    <img src="https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_westindia/indiaCARZ_tourlist_westindia_gandhinagar/AKshardham_Gandhinagar.jpg" class="image-cover" alt="">
                                 </div>
                                 <div class="single-tour-slide">
-                                    <img src="images/IndiaCARZ_tourlist_westindia/indiaCARZ_tourlist_westindia_gandhinagar/gandhinagar-sarita-udhyan.jpg" class="image-cover" alt="">
+                                    <img src="https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_westindia/indiaCARZ_tourlist_westindia_gandhinagar/gandhinagar-sarita-udhyan.jpg" class="image-cover" alt="">
                                 </div>
 								<!-- <div class="single-tour-slide">
                                     <img src="https://indiacarz.s3.ap-south-1.amazonaws.com/indiacarz_images/indiaCARZ_tourlist_westindia/indiaCARZ_tourlist_westindia_Rajasthan/IndiaCARZ_tourlist_northindia_Rajasthan6.jpg" class="image-cover" alt="">
