--- a/tourlist-westindia-maharashtra.html
+++ b/tourlist-westindia-maharashtra.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>IndiaCARZ Tours Mumbai</title>
+    <title>IndiaCARZ Tours Mahrahstra</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
@@ -251,9 +251,9 @@
                                         </div>
                                     </div>
                                     <h1 class="title">
-                                        India, Mumbai
+                                        India, Mahrashtra
                                     </h1>
-                                    <div class="geo">India, Maharashtra, Mumbai</div>
+                                    <div class="geo">India, Maharashtra</div>
                                 </div>
                                 <div class="single-right controls">
                                     <button class="btn getModal" data-href="#"><span>Book now</span></button><!--data-href="#book-now" to #-->
