--- a/tourlist-eastindia-Bhubaneswar.html
+++ b/tourlist-eastindia-Bhubaneswar.html
@@ -212,7 +212,7 @@
                 </div>
             </div>
         </div>
-        <div class="image_bg--single" style="background-image: url(images/IndiaCARZ_tourlist_eastindia/IndiaCARZ_tourlist_eastindia_Bhubanesawar/Bhubaneswar_headimage.jpg);"></div>
+        <div class="image_bg--single" style="background-image: url(https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_eastindia/IndiaCARZ_tourlist_eastindia_Bhubanesawar/Bhubaneswar_headimage.jpg);"></div>
         <div class="page_content single-page tour-single">
             <div class="content-head">
                 <div class="wrap">
@@ -247,19 +247,19 @@
                             </div>
                             <div class="single-tour-slider" id="single-tour-slider">
                                 <div class="single-tour-slide">
-                                    <img src="images/IndiaCARZ_tourlist_eastindia/IndiaCARZ_tourlist_eastindia_Bhubanesawar/Bhubaneswar_image1.jpg" class="image-cover" alt="">
+                                    <img src="https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_eastindia/IndiaCARZ_tourlist_eastindia_Bhubanesawar/Bhubaneswar_image1.jpg" class="image-cover" alt="">
                                 </div>
                                 <div class="single-tour-slide">
-                                    <img src="images/IndiaCARZ_tourlist_eastindia/IndiaCARZ_tourlist_eastindia_Bhubanesawar/Bhubaneswar_image2.jpeg" class="image-cover" alt="">
+                                    <img src="https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_eastindia/IndiaCARZ_tourlist_eastindia_Bhubanesawar/Bhubaneswar_image2.jpeg" class="image-cover" alt="">
                                 </div>
                                 <div class="single-tour-slide">
-                                    <img src="images/IndiaCARZ_tourlist_eastindia/IndiaCARZ_tourlist_eastindia_Bhubanesawar/Bhubaneswar_image3.png" class="image-cover" alt="">
+                                    <img src="https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_eastindia/IndiaCARZ_tourlist_eastindia_Bhubanesawar/Bhubaneswar_image3.png" class="image-cover" alt="">
                                 </div>
                                 <div class="single-tour-slide">
-                                    <img src="images/IndiaCARZ_tourlist_eastindia/IndiaCARZ_tourlist_eastindia_Bhubanesawar/Bhubaneswar_image4.png" class="image-cover" alt="">
+                                    <img src="https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_eastindia/IndiaCARZ_tourlist_eastindia_Bhubanesawar/Bhubaneswar_image4.png" class="image-cover" alt="">
                                 </div>
                                 <div class="single-tour-slide">
-                                    <img src="images/IndiaCARZ_tourlist_eastindia/IndiaCARZ_tourlist_eastindia_Bhubanesawar/Bhubaneswar_image5.jpg" class="image-cover" alt="">
+                                    <img src="https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_eastindia/IndiaCARZ_tourlist_eastindia_Bhubanesawar/Bhubaneswar_image5.jpg" class="image-cover" alt="">
                                 </div>
 								<!-- <div class="single-tour-slide">
                                     <img src="https://indiacarz.s3.ap-south-1.amazonaws.com/indiacarz_images/indiaCARZ_tourlist_eastindia/indiaCARZ_tourlist_eastindia_Sikkim/IndiaCARZ_tourlist_northindia_Sikkim6.jpg" class="image-cover" alt="">
