--- a/tourlist-eastindia-west-bengal-kolkata.html
+++ b/tourlist-eastindia-west-bengal-kolkata.html
@@ -210,7 +210,7 @@
                 </div>
             </div>
         </div>
-        <div class="image_bg--single" style="background-image: url(images/IndiaCARZ_tourlist_eastindia/IndiaCARZ_tourlist_eastindia_Kolkata/Kolkata_headimage.jpg);"></div>
+        <div class="image_bg--single" style="background-image: url(https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_eastindia/IndiaCARZ_tourlist_eastindia_Kolkata/Kolkata_headimage.jpg);"></div>
         <div class="page_content single-page tour-single">
             <div class="content-head">
                 <div class="wrap">
@@ -245,19 +245,19 @@
                             </div>
                             <div class="single-tour-slider" id="single-tour-slider">
                                 <div class="single-tour-slide">
-                                    <img src="images/IndiaCARZ_tourlist_eastindia/IndiaCARZ_tourlist_eastindia_Kolkata/Kolkata_image1.jpg" class="image-cover" alt="">
+                                    <img src="https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_eastindia/IndiaCARZ_tourlist_eastindia_Kolkata/Kolkata_image1.jpg" class="image-cover" alt="">
                                 </div>
                                 <div class="single-tour-slide">
-                                    <img src="images/IndiaCARZ_tourlist_eastindia/IndiaCARZ_tourlist_eastindia_Kolkata/Kolkata_image2.jpg" class="image-cover" alt="">
+                                    <img src="https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_eastindia/IndiaCARZ_tourlist_eastindia_Kolkata/Kolkata_image2.jpg" class="image-cover" alt="">
                                 </div>
                                 <div class="single-tour-slide">
-                                    <img src="images/IndiaCARZ_tourlist_eastindia/IndiaCARZ_tourlist_eastindia_Kolkata/Kolkata_image3.jpg" class="image-cover" alt="">
+                                    <img src="https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_eastindia/IndiaCARZ_tourlist_eastindia_Kolkata/Kolkata_image3.jpg" class="image-cover" alt="">
                                 </div>
                                 <div class="single-tour-slide">
-                                    <img src="images/IndiaCARZ_tourlist_eastindia/IndiaCARZ_tourlist_eastindia_Kolkata/Kolkata_image4.jpg" class="image-cover" alt="">
+                                    <img src="https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_eastindia/IndiaCARZ_tourlist_eastindia_Kolkata/Kolkata_image4.jpg" class="image-cover" alt="">
                                 </div>
                                 <div class="single-tour-slide">
-                                    <img src="images/IndiaCARZ_tourlist_eastindia/IndiaCARZ_tourlist_eastindia_Kolkata/Kolkata_image5.jpg" class="image-cover" alt="">
+                                    <img src="https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_eastindia/IndiaCARZ_tourlist_eastindia_Kolkata/Kolkata_image5.jpg" class="image-cover" alt="">
                                 </div>
 								<!-- <div class="single-tour-slide">
                                     <img src="https://indiacarz.s3.ap-south-1.amazonaws.com/indiacarz_images/indiaCARZ_tourlist_eastindia/indiaCARZ_tourlist_eastindia_West_Bengal/IndiaCARZ_tourlist_eastindia_West_Bengal6.jpg" class="image-cover" alt="">
