--- a/tourlist-northeasternindia-kohima.html
+++ b/tourlist-northeasternindia-kohima.html
@@ -213,7 +213,7 @@
                 </div>
             </div>
         </div>
-        <div class="image_bg--single" style="background-image: url(images/IndiaCARZ_tourlist_northeasternindia/IndiaCARZ_tourlist_northeasternindia_kohima/kohima_headimage.jpg);"></div>
+        <div class="image_bg--single" style="background-image: url(https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_northeasternindia/IndiaCARZ_tourlist_northeasternindia_kohima/kohima_headimage.jpg);"></div>
         <div class="page_content single-page tour-single">
             <div class="content-head">
                 <div class="wrap">
@@ -248,20 +248,20 @@
                             </div>
                             <div class="single-tour-slider" id="single-tour-slider">
                                 <div class="single-tour-slide">
-                                    <img src="images/IndiaCARZ_tourlist_northeasternindia/IndiaCARZ_tourlist_northeasternindia_kohima/Kohima_image1.jpg" class="image-cover" alt="">
+                                    <img src="https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_northeasternindia/IndiaCARZ_tourlist_northeasternindia_kohima/Kohima_image1.jpg" class="image-cover" alt="">
                                 </div>
                                 <div class="single-tour-slide">
-                                    <img src="images/IndiaCARZ_tourlist_northeasternindia/IndiaCARZ_tourlist_northeasternindia_kohima/kohima_image2.jpg" class="image-cover" alt="">
+                                    <img src="https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_northeasternindia/IndiaCARZ_tourlist_northeasternindia_kohima/kohima_image2.jpg" class="image-cover" alt="">
                                 </div>
                                 <div class="single-tour-slide">
-                                    <img src="images/IndiaCARZ_tourlist_northeasternindia/IndiaCARZ_tourlist_northeasternindia_kohima/kohima_image3.jpg" class="image-cover" alt="">
+                                    <img src="https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_northeasternindia/IndiaCARZ_tourlist_northeasternindia_kohima/kohima_image3.jpg" class="image-cover" alt="">
                                 </div>
                                 
                                 <div class="single-tour-slide">
-                                    <img src="images/IndiaCARZ_tourlist_northeasternindia/IndiaCARZ_tourlist_northeasternindia_kohima/Kohima_image4.jpg" class="image-cover" alt="">
+                                    <img src="https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_northeasternindia/IndiaCARZ_tourlist_northeasternindia_kohima/Kohima_image4.jpg" class="image-cover" alt="">
                                 </div>
 								 <div class="single-tour-slide">
-                                    <img src="images/IndiaCARZ_tourlist_northeasternindia/IndiaCARZ_tourlist_northeasternindia_kohima/Kohima_image5.jpg" class="image-cover" alt="">
+                                    <img src="https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_northeasternindia/IndiaCARZ_tourlist_northeasternindia_kohima/Kohima_image5.jpg" class="image-cover" alt="">
                                 </div>
 								<!--<div class="single-tour-slide">
                                     <img src="https://indiacarz.s3.ap-south-1.amazonaws.com/indiacarz_images/indiaCARZ_tourlist_northeasternindia/indiaCARZ_tourlist_northeasternindia_Assam/IndiaCARZ_tourlist_northindia_Assam7.jpg" class="image-cover" alt="">
