--- a/tourlist-northindia-ladakh.html
+++ b/tourlist-northindia-ladakh.html
@@ -228,7 +228,7 @@
                 </div>
             </div>
         </div>
-        <div class="image_bg--single" style="background-image: url(images/IndiaCARZ_tourlist_northindia/indiaCARZ_tourlist_northindia_ladakh/ladakh_headimage.jpg);"></div>
+        <div class="image_bg--single" style="background-image: url(https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_northindia/indiaCARZ_tourlist_northindia_ladakh/ladakh_headimage.jpg);"></div>
         <div class="page_content single-page tour-single">
             <div class="content-head">
                 <div class="wrap">
@@ -263,19 +263,19 @@
                             </div>
                             <div class="single-tour-slider" id="single-tour-slider">
                                 <div class="single-tour-slide">
-                                    <img src="images/IndiaCARZ_tourlist_northindia/indiaCARZ_tourlist_northindia_ladakh/ladakh_image1.jpg" class="image-cover" alt="">
+                                    <img src="https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_northindia/indiaCARZ_tourlist_northindia_ladakh/ladakh_image1.jpg" class="image-cover" alt="">
                                 </div>
                                 <div class="single-tour-slide">
-                                    <img src="images/IndiaCARZ_tourlist_northindia/indiaCARZ_tourlist_northindia_ladakh/ladakh_image2.jpg" class="image-cover" alt="">
+                                    <img src="https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_northindia/indiaCARZ_tourlist_northindia_ladakh/ladakh_image2.jpg" class="image-cover" alt="">
                                 </div>
                                 <div class="single-tour-slide">
-                                    <img src="images/IndiaCARZ_tourlist_northindia/indiaCARZ_tourlist_northindia_ladakh/ladakh_image3.jpg" class="image-cover" alt="">
+                                    <img src="https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_northindia/indiaCARZ_tourlist_northindia_ladakh/ladakh_image3.JPG" class="image-cover" alt="">
                                 </div>
                                 <div class="single-tour-slide">
-                                    <img src="images/IndiaCARZ_tourlist_northindia/indiaCARZ_tourlist_northindia_ladakh/ladakh_image4.jpg" class="image-cover" alt="">
+                                    <img src="https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_northindia/indiaCARZ_tourlist_northindia_ladakh/ladakh_image4.jpg" class="image-cover" alt="">
                                 </div>
                                 <div class="single-tour-slide">
-                                    <img src="images/IndiaCARZ_tourlist_northindia/indiaCARZ_tourlist_northindia_ladakh/ladakh_image5.jpg" class="image-cover" alt="">
+                                    <img src="https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_northindia/indiaCARZ_tourlist_northindia_ladakh/ladakh_image5.jpg" class="image-cover" alt="">
                                 </div>
 								<!-- <div class="single-tour-slide">
                                     <img src="https://indiacarz.s3.ap-south-1.amazonaws.com/indiacarz_images/indiaCARZ_tourlist_northindia/indiaCARZ_tourlist_northindia_Delhi/IndiaCARZ_tourlist_northindia_Delhi6.jpg" class="image-cover" alt="">
