--- a/tourlist-southindia-amaravati.html
+++ b/tourlist-southindia-amaravati.html
@@ -212,7 +212,7 @@
                 </div>
             </div>
         </div>
-        <div class="image_bg--single" style="background-image: url(images/IndiaCARZ_tourlist_southindia/IndiaCARZ_tourlist_southindia_amaravati/Amaravathi_headimage.jpg);"></div>
+        <div class="image_bg--single" style="background-image: url(https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_southindia/IndiaCARZ_tourlist_southindia_amaravati/Amaravathi_headimage.jpg);"></div>
         <div class="page_content single-page tour-single">
             <div class="content-head">
                 <div class="wrap">
@@ -247,19 +247,19 @@
                             </div>
                             <div class="single-tour-slider" id="single-tour-slider">
                                 <div class="single-tour-slide">
-                                    <img src="images/IndiaCARZ_tourlist_southindia/IndiaCARZ_tourlist_southindia_amaravati/Amaravathi_image1.png" class="image-cover" alt="">
+                                    <img src="https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_southindia/IndiaCARZ_tourlist_southindia_amaravati/Amaravathi_image1.png" class="image-cover" alt="">
                                 </div>
                                 <div class="single-tour-slide">
-                                    <img src="images/IndiaCARZ_tourlist_southindia/IndiaCARZ_tourlist_southindia_amaravati/Amaravathi_image2.jpg" class="image-cover" alt="">
+                                    <img src="https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_southindia/IndiaCARZ_tourlist_southindia_amaravati/Amaravathi_image2.jpg" class="image-cover" alt="">
                                 </div>
                                 <div class="single-tour-slide">
-                                    <img src="images/IndiaCARZ_tourlist_southindia/IndiaCARZ_tourlist_southindia_amaravati/Amaravathi_image3.jpg" class="image-cover" alt="">
+                                    <img src="https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_southindia/IndiaCARZ_tourlist_southindia_amaravati/Amaravathi_image3.jpg" class="image-cover" alt="">
                                 </div>
                                 <div class="single-tour-slide">
-                                    <img src="images/IndiaCARZ_tourlist_southindia/IndiaCARZ_tourlist_southindia_amaravati/Amaravathi_image4.jpg" class="image-cover" alt="">
+                                    <img src="https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_southindia/IndiaCARZ_tourlist_southindia_amaravati/Amaravathi_image4.jpg" class="image-cover" alt="">
                                 </div>
                                 <div class="single-tour-slide">
-                                    <img src="images/IndiaCARZ_tourlist_southindia/IndiaCARZ_tourlist_southindia_amaravati/Amaravathi_image5.jpg" class="image-cover" alt="">
+                                    <img src="https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_southindia/IndiaCARZ_tourlist_southindia_amaravati/Amaravathi_image5.jpg" class="image-cover" alt="">
                                 </div>
 
 								<!-- <div class="single-tour-slide">
