--- a/tourlist-westindia-rajasthan-jaipur.html
+++ b/tourlist-westindia-rajasthan-jaipur.html
@@ -212,7 +212,7 @@
                 </div>
             </div>
         </div>
-        <div class="image_bg--single" style="background-image: url(images/IndiaCARZ_tourlist_westindia/indiaCARZ_tourlist_westindia_Jaipur/Gangori_Bazaarr_Head_Image.jpg);"></div>
+        <div class="image_bg--single" style="background-image: url(https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_westindia/indiaCARZ_tourlist_westindia_Jaipur/Gangori_Bazaarr_Head_Image.jpg);"></div>
         <div class="page_content single-page tour-single">
             <div class="content-head">
                 <div class="wrap">
@@ -247,19 +247,19 @@
                             </div>
                             <div class="single-tour-slider" id="single-tour-slider">
                                 <div class="single-tour-slide">
-                                    <img src="images/IndiaCARZ_tourlist_westindia/indiaCARZ_tourlist_westindia_Jaipur/Patrika_gate_Jaipur.jpg" class="image-cover" alt="">
+                                    <img src="https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_westindia/indiaCARZ_tourlist_westindia_Jaipur/Patrika_gate_Jaipur.jpg" class="image-cover" alt="">
                                 </div>
                                 <div class="single-tour-slide">
-                                    <img src="images/IndiaCARZ_tourlist_westindia/indiaCARZ_tourlist_westindia_Jaipur/Hawa_Mahal_Jaipur.jpg" class="image-cover" alt="">
+                                    <img src="https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_westindia/indiaCARZ_tourlist_westindia_Jaipur/Hawa_Mahal_Jaipur.jpg" class="image-cover" alt="">
                                 </div>
                                 <div class="single-tour-slide">
-                                    <img src="images/IndiaCARZ_tourlist_westindia/indiaCARZ_tourlist_westindia_Jaipur/JDA_Market_Jaipur.jpg" class="image-cover" alt="">
+                                    <img src="https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_westindia/indiaCARZ_tourlist_westindia_Jaipur/JDA_Market_Jaipur.jpg" class="image-cover" alt="">
                                 </div>
                                 <div class="single-tour-slide">
-                                    <img src="images/IndiaCARZ_tourlist_westindia/indiaCARZ_tourlist_westindia_Jaipur/Raj_Mandir_Cinema_Jaipur.jpg" class="image-cover" alt="">
+                                    <img src="https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_westindia/indiaCARZ_tourlist_westindia_Jaipur/Raj_Mandir_Cinema_Jaipur.jpg" class="image-cover" alt="">
                                 </div>
                                 <div class="single-tour-slide">
-                                    <img src="images/IndiaCARZ_tourlist_westindia/indiaCARZ_tourlist_westindia_Jaipur/Amber-Palace_Jaipur_Head_Image.jpg" class="image-cover" alt="">
+                                    <img src="https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_westindia/indiaCARZ_tourlist_westindia_Jaipur/Amber-Palace_Jaipur_Head_Image.jpg" class="image-cover" alt="">
                                 </div>
 								<!-- <div class="single-tour-slide">
                                     <img src="https://indiacarz.s3.ap-south-1.amazonaws.com/indiacarz_images/indiaCARZ_tourlist_westindia/indiaCARZ_tourlist_westindia_Rajasthan/IndiaCARZ_tourlist_northindia_Rajasthan6.jpg" class="image-cover" alt="">
